# alpinocorpus

./: .gitignore  CMakeLists.txt  Doxyfile  DoxyfilePrivate  Makefile  README  README.branch  README.md  TODO  TODO.simple-iter  TODO.websocket  alpinocorpus-create.1.html  alpinocorpus-extract.1.html  alpinocorpus-get.1.html  alpinocorpus-stats.1.html  alpinocorpus-xpath.1.html  alpinocorpus-xquery.1.html  alpinocorpus-xslt.1.html  alpinocorpus.pc.in  alpinocorpus.sublime-project  default.nix  flake.nix  index.html  manpage.css  meson.build  sanitize.nix  shell.nix
AlpinoCorpus/: CorpusReader.hh  DLLDefines.hh  DictZipFile.hh  DirectoryCorpusReader.hh  DzChunk.hh  IndexNamePair.hh  IndexedCorpusReader.hh  IndexedCorpusWriter.hh  NullStream.hh  gzip.hh
IndexedCorpus/: ActCorpusReader.hh  CorpusReader.hh  DLLDefines.hh  DictZipFile.hh  DirectoryCorpusReader.hh  DzChunk.hh  DzIstream.hh  DzOstream.hh  DzOstreamBuf.hh  IndexNamePair.hh  IndexedCorpusReader.hh  IndexedCorpusWriter.hh  gzip.hh
bindings/: NOTICE.txt
bindings/python/: CMakeLists.txt
bindings/python/examples/: bracket.py  vorfeld.py
bindings/python/src/: alpinocorpus.cpp  alpinocorpus.h
bindings/ruby/: CMakeLists.txt
bindings/ruby/examples/: bracket.rb
bindings/ruby/ext/: alpinocorpus.c  corpusreader.c  extconf.rb  markerquery.c  query.c
bindings/ruby/src/: alpinocorpus.c  alpinocorpus.h  corpusreader.c  corpusreader.h  markerquery.c  query.c
cmake/: FindDBXML.cmake  FindLibJson.cmake  FindQDictZip.cmake  FindXQilla.cmake  FindXercesC.cmake
debian/: alpino-corpus-util.install  changelog  control  libalpino-corpus-dev.install  libalpino-corpus-dev.install.in  libalpino-corpus0.install  libalpino-corpus2.0.install  libalpino-corpus2.4.install.in  rules
doc/: Python.html  Python.md
haskell/: alpinocorpus.cabal
haskell/Data/Alpino/: Treebank.hs
haskell/Data/Alpino/Treebank/: Raw.hsc
haskell/src/Data/Alpino/: Corpus.hs  Treebank.hs
haskell/src/Data/Alpino/Corpus/: Raw.hsc
haskell/src/Data/Alpino/Treebank/: Raw.hsc
include/: config.hh.in  meson.build
include/AlpinoCorpus/: CompactCorpusReader.hh  CompactCorpusWriter.hh  Config.hh  CorpusInfo.hh  CorpusReader.hh  CorpusReaderFactory.hh  CorpusWriter.hh  DLLDefines.hh  DbCorpusReader.hh  DbCorpusWriter.hh  DirectoryCorpusReader.hh  DzChunk.hh  DzIstream.hh  DzIstreamBuf.hh  Entry.hh  Error.hh  ExportXMLCorpusReader.hh  IndexedCorpusReader.hh  IndexedCorpusWriter.hh  IterImpl.hh  LexItem.hh  MultiCorpusReader.hh  NullStream.hh  QDictZipFile.hh  QueryResultHandler.hh  RecursiveCorpusReader.hh  RemoteCorpusReader.hh  Stylesheet.hh  WebSocketReader.hh  XSLTransformer.hh  capi.h  config.h.in  macros.hh  version.hh.in
include/AlpinoCorpus/tr1wrap/: memory.hh
include/AlpinoCorpus/util/: Either.hh  GetUrl.hh  NonCopyable.hh  bufutil.hh  stringutil.hh
include/util/: NonCopyable.hh  base64.hh  markqueries.hh  textfile.hh  url.hh
man/: Makefile  alpinocorpus-create.1  alpinocorpus-create.1.md  alpinocorpus-extract.1  alpinocorpus-extract.1.md  alpinocorpus-get.1  alpinocorpus-get.1.md  alpinocorpus-stats.1  alpinocorpus-stats.1.md  alpinocorpus-xpath.1  alpinocorpus-xpath.1.md  alpinocorpus-xquery.1  alpinocorpus-xquery.1.md  alpinocorpus-xslt.1  (+2 more)
src/: CompactCorpusReader.cpp  CompactCorpusReaderPrivate.cpp  CompactCorpusReaderPrivate.hh  CompactCorpusWriter.cpp  CompactCorpusWriterPrivate.cpp  CompactCorpusWriterPrivate.hh  Config.cpp  CorpusInfo.cpp  CorpusReader.cpp  CorpusReaderFactory.cpp  CorpusWriter.cpp  DbCorpusReader.cpp  DbCorpusReaderPrivate.cpp  DbCorpusReaderPrivate.hh  DbCorpusWriter.cpp  DirectoryCorpusReader.cpp  DirectoryCorpusReaderPrivate.cpp  DirectoryCorpusReaderPrivate.hh  DzIstream.cpp  DzIstream.hh  DzIstreamBuf.cpp  DzIstreamBuf.hh  DzOstream.cpp  DzOstream.hh  DzOstreamBuf.cpp  DzOstreamBuf.hh  Entry.cpp  Error.cpp  ExportXMLCorpusReader.cpp  FilterIter.cpp  FilterIter.hh  IndexNamePair.cpp  IndexedCorpusReader.cpp  IndexedCorpusReaderPrivate.cpp  IndexedCorpusReaderPrivate.hh  IndexedCorpusWriter.cpp  IterImpl.cpp  MacrosPrivate.cpp  MacrosPrivate.hh  MultiCorpusReader.cpp  (+25 more)
src/ActCorpusReader/: ActCorpusReader.cpp  ActCorpusReader.ih
src/CorpusReader/: CorpusReader.cpp  CorpusReader.ih  StylesheetIter.cpp
src/DictZipFile/: DictZipFile.cpp  DictZipFile.ih
src/DirectoryCorpusReader/: DirectoryCorpusReader.cpp  DirectoryCorpusReader.ih
src/DzIstream/: DzIstream.cpp  DzIstream.ih
src/DzIstreamBuf/: DzIstreamBuf.cpp
src/DzOstream/: DzOstream.cpp  DzOstream.ih
src/DzOstreamBuf/: DzOstreamBuf.cpp  DzOstreamBuf.ih
src/IndexNamePair/: .IndexNamePair.cpp.swp  IndexNamePair.cpp  IndexNamePair.ih
src/IndexedCorpusReader/: IndexedCorpusReader.cpp  IndexedCorpusReader.ih
src/IndexedCorpusWriter/: IndexedCorpusWriter.cpp  IndexedCorpusWriter.ih
src/MessageListener/: GetMessageListener.cpp  GetMessageListener.hh  MessageListener.hh  QueuedMessageListener.cpp  QueuedMessageListener.hh
src/alpino2db/: main.cpp
src/alpinocvt/: main.cpp
src/cact/: ProgramOptions.cpp  ProgramOptions.hh  main.cpp
src/merge/: merge.cpp
src/util/: GetUrl.cpp  GetUrl.hh  InfInt.h  JSONObject.cpp  JSONObject.hh  NameCompare.cpp  NameCompare.hh  base64.cpp  base64.hh  bufutil.hh  markqueries.cpp  parseString.hh  split.cpp  split.hh  textfile.cpp  textfile.hh  url.cpp
src/util/textfile/: textfile.cpp  textfile.ih
test/: CMakeLists.txt  README  compact_handle_filename_with_spaces.cpp  geturl.cpp  maxh.txt  meson.build  readers_available.cpp  test.cpp  writer.cpp  writer.hh
test/test_corpora/: filename_with_spaces.data.dz  filename_with_spaces.index
test/test_suite/: 1.xml  2.xml  3.xml  4.xml
util/: CMakeLists.txt  meson.build
util/act/: ProgramOptions.hh  main.cpp
util/common/: EqualsPrevious.hh  ProgramOptions.cpp  Stylesheet.cpp  Stylesheet.hh  XSLTransformer.cpp  XSLTransformer.hh  macros.cpp  macros.hh  util.cpp  util.hh
util/config/: main.cpp
util/create/: main.cpp
util/extract/: main.cpp
util/get/: main.cpp
util/stats/: main.cpp
util/xpath/: main.cpp
util/xquery/: main.cpp
util/xslt/: main.cpp
(+16 files in other folders)
