Name:               alpinocorpus
Version:            0.0.1
License:            LGPL
Copyright:          Daniël de Kok
Maintainer:         Daniël de Kok <me@danieldk.eu>
Author:             Daniël de Kok <me@danieldk.eu>
Category:           Data
Synopsis:           Alpino treebank reader
Description:        Reader for various Alpino treebank formats: directory-based
                    corpora, compact corpora, and DBXML corpora.
Build-Type:         Simple
Cabal-Version:      >= 1.4

Library
  Build-Depends:        base >= 4 && < 5, enumerator >= 0.4.13.1 && < 0.5,
                        transformers >= 0.2.2.0 && < 0.3
  Exposed-modules:      Data.Alpino.Treebank, Data.Alpino.Treebank.Raw
  Ghc-Options:          -Wall
